# gg_engine

./: .clang.d  .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/implementation/: base_window_impl.cpp  windows_window_impl.cpp
modules/core/interface/: base_window.cppm  i_window.cppm  types.cppm  vector.cppm  window_descriptor.cppm  windows_window.cppm
programs/gg_studio/: CMakeLists.txt
programs/gg_studio/resources/: gg_studio.aps  gg_studio.rc  resource.h
programs/gg_studio/src/: main.cpp  tmp
programs/gg_studio/src/include/: app.hpp  dx11_graphics.hpp  dxgi_info_manager.hpp  exception.hpp  keyboard.hpp  mouse.hpp  timer.hpp  window.h
programs/gg_studio/src/private/: app.cpp  dx11_graphics.cpp  dxgi_info_manager.cpp  exception.cpp  keyboard.cpp  main.cpp  mouse.cpp  timer.cpp  window.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/vector/: vector_tests.cpp
